--- a/applications/xihe-test-v2/hook-delivery/kustomization.yaml
+++ b/applications/xihe-test-v2/hook-delivery/kustomization.yaml
@@ -9,4 +9,4 @@ nameSuffix: -hook-delivery
 images:
 - name: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe
   newName: swr.cn-north-4.myhuaweicloud.com/opensourceway/xihe/xihe-gitlab-hook-delivery
-  newTag: sec-a75cce
+  newTag: sec-7b6b9b
