--- a/applications/xihe-test/ingress.yaml
+++ b/applications/xihe-test/ingress.yaml
@@ -4,6 +4,13 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/proxy-body-size: 10m
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      add_header X-Content-Type-Options "nosniff";
+      add_header X-XSS-Protection "1; mode=block";
+      add_header X-Frame-Options "DENY";
+      add_header Content-Security-Policy "script-src 'self' *.baidu.com 'unsafe-inline' 'unsafe-eval'; object-src 'none'; frame-src xihe-test2-cz.authing.cn *.mindspore.cn";
+      add_header Cache-Control "no-cache";
+      add_header Pragma "no-cache";
   name: xihe-ingress
   namespace: xihe-test
 spec:
